--- a/src/app/home/ui/post/post.component.html
+++ b/src/app/home/ui/post/post.component.html
@@ -1,3 +1,4 @@
 <a href="" class="post" (click)="togglePostInfo($event)">
-  {{displayOrder[0]}}
+  <p>{{titleOnDisplay}}:</p>
+  <p>{{valueOnDisplay}}</p>
 </a>
