--- a/src/app/home/ui/post/post.component.html
+++ b/src/app/home/ui/post/post.component.html
@@ -1,5 +1,6 @@
-<a href="" class="flex flex-col h-full w-full aspect-square border-solid border-2 rounded-2xl transition-transform duration-300 ease-in-out hover:-translate-y-1.5" [ngClass]="isActive ? 'border-[#ff3600]' : 'border-black'" (click)="togglePostInfo($event)">
-  <h1 class="capitalize text-xs text-gray-400 border-b border-b-1 border-b-gray-300 py-1 px-2">{{titleOnDisplay}}</h1>
+<a href="" class="flex flex-col h-full w-full aspect-square border-solid border-2 rounded-2xl transition-transform duration-300 ease-in-out hover:-translate-y-1.5"
+   [ngClass]="isActive ? 'border-[#ff3600]' : 'border-black'" (click)="togglePostInfo($event)">
+  <h1 class="capitalize text-xs text-gray-400 border-b border-b-1 border-b-gray-300 py-1 px-2">{{keyOnDisplay}}</h1>
   <div class="p-2">
     <p class="line-clamp-1 lg:line-clamp-3 xl:line-clamp-4 2xl:line-clamp-6 text-sm leading-5" title="{{valueOnDisplay}}">{{valueOnDisplay}}</p>
   </div>
